feat: Added javadocs, formating and linting